2003-02-27  JMB  Enum option index sorting/filtering, enum manager bugfix

    Changed enum sorting to sort by option index instead of option text.
    Enum filter conditions changed to match, allowing the full set of
    numeric inequality operators.

    Fixed a bug in the enum manager which caused a crash if you exited
    without making any changes (bug introduced in 1.5).

2003-02-26  JMB  File rename and copy menu items

    The file selector's "File" menu now has "Rename" and "Copy" items
    which do what you'd expect.  (Zaurus version only)

2003-02-25  JMB  File->Row menu, row copy

    Added a "Row" submenu to the data viewer's "File" menu to replace the
    old top-level menu of the same name that was removed due to lack of
    space.

    Added a "Copy" action to the new Row menu, which launches the row
    editor to create a new row, but filled with the currently selected
    row's data instead of the default values.

2003-02-24  JMB  Fixed XML import bug, command-line error message encoding

    The XML importer was retrieving column values by index instead of
    ID, leading to import failure in many cases; fixed.

    Error messages shown during command-line usage should now be using
    a reasonable encoding for the locale; hopefully this will allow the
    display of Japanese text on the Japanese Zaurus models.

2003-02-19  JMB  Better XML import error messages

    Don't overwrite meaningful error message with useless generic error
    message.  Fixes behavior on Zaurus and Windows.

2003-02-12  #################### PortaBase 1.5 ####################

2003-02-12  JMB  Assorted bug fixes and code cleanup

    In the process of testing the code for a 1.5 release, fixed an
    assortment of minor usability bugs, compiler warnings, and so on.

2003-02-10  JMB  Import file selector crash fix

    Fixed a crash when clicking "OK" in the import file selector instead
    of clicking on one of the listed files.  (Zaurus version only)
