@@ -95,7 +95,7 @@ Click "OK" to accept any changes that were made or "X"/"Cancel" to leave the opt
 <a name="viewedit"><b>6)View editor</b></a><br>
 Whenever you browse a database's content in the <a href="#viewer">data viewer</a>, you are looking at one "view" of the data.  A view is a subset of the columns in the database, displayed in a particular order and with specified display widths.  Each database has a default "All Columns" view which shows all the columns in the database in the same order as they appear in the <a href="rowedit">row editor</a>.<br>
 <br>
-Views are defined using the view editor dialog.  At the top of the dialog is a text box containing the name of the view; changing this renames the view.  Below that is a table showing the names of all the columns in the database, with a checkbox next to each indicating whether or not it is included in this view.  Click this checkbox to include or exclude the column.  At the bottom of the dialog are "Up" and "Down" buttons for moving the selected row up or down in the table, changing the order of the columns in the view.  Click "OK" to accept the currently shown settings or "X"/"Cancel" to revert to the previous values (or to cancel adding a new view).<br>
+Views are defined using the view editor dialog.  At the top of the dialog is a text box containing the name of the view; changing this renames the view.  Next are droplists allowing you to pick a default sorting and/or filter that will be applied whenever you switch to this view; selecting "None" leaves the current sorting or filter unchanged.  (This avoids the need to select a view, then a sorting, then a filter if there are certain combinations of these you use often.)  Below those is a table showing the names of all the columns in the database, with a checkbox next to each indicating whether or not it is included in this view.  Click this checkbox to include or exclude the column.  At the bottom of the dialog are "Up" and "Down" buttons for moving the selected row up or down in the table, changing the order of the columns in the view.  Click "OK" to accept the currently shown settings or "X"/"Cancel" to revert to the previous values (or to cancel adding a new view).<br>
 <br>
 <a name="viewer"><b>7)Data viewer</b></a><br>
 This is the main screen of the application, where you can browse the database's content and launch most of the other dialogs.  The contents of this screen are:<br>
